metrics server refactor